--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,14 @@ version: '3'
 services:
   users-service:
     build: ./service
-    volumes:
-      - ./web_service/src:/var/www/html
-    container_name: php_web_service
+    container_name: users_service
     ports:
-      - "80:80"
-    depends_on:
-      - database
+     - "8123:8123"
     links:
-      - database:database
+      - db:db
+    depends_on:
+     - db
     environment:
-      - DATABASE_HOST=database
-  database:
-    build: ./mysql_db
-    ports:
-      - "3306:3306"
+     - DATABASE_HOST=db
+  db:
+    build: ./database
