--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -1,1 +1,15 @@
-node build
+# Use Node v4 as the base image.
+FROM node:4
+
+# Add everything in the current directory to our image, in the 'app' folder.
+ADD . /app
+
+# Install dependencies
+RUN cd /app; \
+    npm install --production
+
+# Expose our server port.
+EXPOSE 8123
+
+# Run our app.
+CMD ["node", "/app/index.js"]
