--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "nodemon": "^1.12.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-router-dom": "^4.2.2",
+    "react-router-modal": "^1.2.0",
     "react-scripts": "1.0.17"
   },
   "scripts": {
