--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
+    "chokidar": "^1.7.0",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "foreman": "^2.0.0",
     "marked": "^0.3.6",
-    "mongoose": "^4.13.2",
+    "mongoose": "^4.13.4",
     "nodemon": "^1.12.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
