--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "foreman": "^2.0.0",
     "marked": "^0.3.6",
     "mongoose": "^4.13.4",
+    "multer": "^1.3.0",
     "nodemon": "^1.12.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
