--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "chokidar": "^1.7.0",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "express-validator": "^4.3.0",
     "foreman": "^2.0.0",
     "marked": "^0.3.6",
     "mongoose": "^4.13.4",
     "multer": "^1.3.0",
     "nodemon": "^1.12.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-router-dom": "^4.2.2",
