--- a/package.json
+++ b/package.json
@@ -7,17 +7,24 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "chokidar": "^1.7.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.1",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
+    "es6-promisify": "^5.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "foreman": "^2.0.0",
     "marked": "^0.3.6",
     "mongoose": "^4.13.4",
+    "mongoose-mongodb-errors": "0.0.2",
+    "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.4.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-router-dom": "^4.2.2",
